--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,6 +50,14 @@
         <div id="save-result" class="result"></div>
     </div>
 
+    <div class="section">
+        <h2>8. Team laden</h2>
+        <label for="load-filename">Dateiname:</label>
+        <input type="text" id="load-filename" placeholder="e.g. my-team">
+        <button id="load-btn">Laden</button>
+        <div id="load-result" class="result"></div>
+    </div>
+
      
     <script src="script.js"></script>
 </body>
